// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Render Design Instance 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="oj-design-form-main"
      >
        <form>
          <div
            class="oj-design-form"
          >
            <h4
              class="oj-design-form-title"
            >
              snack
            </h4>
            <ul
              class="oj-form-group"
            >
              <li>
                <label
                  for="df_description_0"
                >
                  Description
                </label>
                <input
                  id="df_description_0"
                  type="text"
                  value=""
                />
              </li>
              <li>
                <label
                  for="df_fruit_0"
                >
                  Fruit
                </label>
                <select
                  id="df_fruit_0"
                >
                  <option
                    value="value"
                  >
                    value
                  </option>
                  <option
                    value="apple"
                  >
                    apple
                  </option>
                  <option
                    value="orange"
                  >
                    orange
                  </option>
                </select>
                <div
                  class="oj-design-form"
                >
                  <h4
                    class="oj-design-form-title"
                  >
                    orange
                  </h4>
                  <ul
                    class="oj-form-group"
                  >
                    <li>
                      <label
                        for="df_seedless_1"
                      >
                        Seedless
                      </label>
                      <input
                        id="df_seedless_1"
                        type="text"
                        value="true"
                      />
                    </li>
                  </ul>
                </div>
              </li>
            </ul>
          </div>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="oj-design-form-main"
    >
      <form>
        <div
          class="oj-design-form"
        >
          <h4
            class="oj-design-form-title"
          >
            snack
          </h4>
          <ul
            class="oj-form-group"
          >
            <li>
              <label
                for="df_description_0"
              >
                Description
              </label>
              <input
                id="df_description_0"
                type="text"
                value=""
              />
            </li>
            <li>
              <label
                for="df_fruit_0"
              >
                Fruit
              </label>
              <select
                id="df_fruit_0"
              >
                <option
                  value="value"
                >
                  value
                </option>
                <option
                  value="apple"
                >
                  apple
                </option>
                <option
                  value="orange"
                >
                  orange
                </option>
              </select>
              <div
                class="oj-design-form"
              >
                <h4
                  class="oj-design-form-title"
                >
                  orange
                </h4>
                <ul
                  class="oj-form-group"
                >
                  <li>
                    <label
                      for="df_seedless_1"
                    >
                      Seedless
                    </label>
                    <input
                      id="df_seedless_1"
                      type="text"
                      value="true"
                    />
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test Render Text Field 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="oj-design-form-main"
      >
        <form>
          <div
            class="oj-design-form"
          >
            <h4
              class="oj-design-form-title"
            >
              snack
            </h4>
            <ul
              class="oj-form-group"
            >
              <li>
                <label
                  for="df_description_0"
                >
                  Description
                </label>
                <input
                  id="df_description_0"
                  type="text"
                  value=""
                />
              </li>
              <li>
                <label
                  for="df_fruit_0"
                >
                  Fruit
                </label>
                <select
                  id="df_fruit_0"
                >
                  <option
                    value="value"
                  >
                    value
                  </option>
                  <option
                    value="apple"
                  >
                    apple
                  </option>
                  <option
                    value="orange"
                  >
                    orange
                  </option>
                </select>
                <div
                  class="oj-design-form"
                >
                  <h4
                    class="oj-design-form-title"
                  >
                    apple
                  </h4>
                  <ul
                    class="oj-form-group"
                  >
                    <li>
                      <label
                        for="df_colour_1"
                      >
                        Colour
                      </label>
                      <input
                        id="df_colour_1"
                        type="text"
                        value="Green"
                      />
                    </li>
                    <ul
                      class="oj-form-group"
                    >
                      <li>
                        <label
                          for="df_taste_2"
                        >
                          Taste
                        </label>
                        <input
                          id="df_taste_2"
                          type="text"
                          value="Crispy"
                        />
                      </li>
                      <li>
                        <label
                          for="df_size_2"
                        >
                          Size
                        </label>
                        <input
                          id="df_size_2"
                          type="text"
                          value=""
                        />
                      </li>
                    </ul>
                  </ul>
                </div>
              </li>
            </ul>
          </div>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="oj-design-form-main"
    >
      <form>
        <div
          class="oj-design-form"
        >
          <h4
            class="oj-design-form-title"
          >
            snack
          </h4>
          <ul
            class="oj-form-group"
          >
            <li>
              <label
                for="df_description_0"
              >
                Description
              </label>
              <input
                id="df_description_0"
                type="text"
                value=""
              />
            </li>
            <li>
              <label
                for="df_fruit_0"
              >
                Fruit
              </label>
              <select
                id="df_fruit_0"
              >
                <option
                  value="value"
                >
                  value
                </option>
                <option
                  value="apple"
                >
                  apple
                </option>
                <option
                  value="orange"
                >
                  orange
                </option>
              </select>
              <div
                class="oj-design-form"
              >
                <h4
                  class="oj-design-form-title"
                >
                  apple
                </h4>
                <ul
                  class="oj-form-group"
                >
                  <li>
                    <label
                      for="df_colour_1"
                    >
                      Colour
                    </label>
                    <input
                      id="df_colour_1"
                      type="text"
                      value="Green"
                    />
                  </li>
                  <ul
                    class="oj-form-group"
                  >
                    <li>
                      <label
                        for="df_taste_2"
                      >
                        Taste
                      </label>
                      <input
                        id="df_taste_2"
                        type="text"
                        value="Crispy"
                      />
                    </li>
                    <li>
                      <label
                        for="df_size_2"
                      >
                        Size
                      </label>
                      <input
                        id="df_size_2"
                        type="text"
                        value=""
                      />
                    </li>
                  </ul>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test Render Text Field 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="oj-design-form-main"
      >
        <form>
          <div
            class="oj-design-form"
          >
            <h4
              class="oj-design-form-title"
            >
              snack
            </h4>
            <ul
              class="oj-form-group"
            >
              <li>
                <label
                  for="df_description_0"
                >
                  Description
                </label>
                <input
                  id="df_description_0"
                  type="text"
                  value="An Afternoon Snack"
                />
              </li>
              <li>
                <label
                  for="df_fruit_0"
                >
                  Fruit
                </label>
                <select
                  id="df_fruit_0"
                >
                  <option
                    value="value"
                  >
                    value
                  </option>
                  <option
                    value="apple"
                  >
                    apple
                  </option>
                  <option
                    value="orange"
                  >
                    orange
                  </option>
                </select>
                <div
                  class="oj-design-form"
                >
                  <h4
                    class="oj-design-form-title"
                  >
                    apple
                  </h4>
                  <ul
                    class="oj-form-group"
                  >
                    <li>
                      <label
                        for="df_colour_1"
                      >
                        Colour
                      </label>
                      <input
                        id="df_colour_1"
                        type="text"
                        value="Green"
                      />
                    </li>
                    <ul
                      class="oj-form-group"
                    >
                      <li>
                        <label
                          for="df_taste_2"
                        >
                          Taste
                        </label>
                        <input
                          id="df_taste_2"
                          type="text"
                          value="Tangy"
                        />
                      </li>
                      <li>
                        <label
                          for="df_size_2"
                        >
                          Size
                        </label>
                        <input
                          id="df_size_2"
                          type="text"
                          value=""
                        />
                      </li>
                    </ul>
                  </ul>
                </div>
              </li>
            </ul>
          </div>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="oj-design-form-main"
    >
      <form>
        <div
          class="oj-design-form"
        >
          <h4
            class="oj-design-form-title"
          >
            snack
          </h4>
          <ul
            class="oj-form-group"
          >
            <li>
              <label
                for="df_description_0"
              >
                Description
              </label>
              <input
                id="df_description_0"
                type="text"
                value="An Afternoon Snack"
              />
            </li>
            <li>
              <label
                for="df_fruit_0"
              >
                Fruit
              </label>
              <select
                id="df_fruit_0"
              >
                <option
                  value="value"
                >
                  value
                </option>
                <option
                  value="apple"
                >
                  apple
                </option>
                <option
                  value="orange"
                >
                  orange
                </option>
              </select>
              <div
                class="oj-design-form"
              >
                <h4
                  class="oj-design-form-title"
                >
                  apple
                </h4>
                <ul
                  class="oj-form-group"
                >
                  <li>
                    <label
                      for="df_colour_1"
                    >
                      Colour
                    </label>
                    <input
                      id="df_colour_1"
                      type="text"
                      value="Green"
                    />
                  </li>
                  <ul
                    class="oj-form-group"
                  >
                    <li>
                      <label
                        for="df_taste_2"
                      >
                        Taste
                      </label>
                      <input
                        id="df_taste_2"
                        type="text"
                        value="Tangy"
                      />
                    </li>
                    <li>
                      <label
                        for="df_size_2"
                      >
                        Size
                      </label>
                      <input
                        id="df_size_2"
                        type="text"
                        value=""
                      />
                    </li>
                  </ul>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
